--- a/index.css
+++ b/index.css
@@ -77,3 +77,7 @@ p.recipe-desc{
     justify-content: center;
     text-align: center;
 }
+.note{
+    text-align: center;
+    margin-top: 10px;
+}
