--- a/index.css
+++ b/index.css
@@ -3,6 +3,9 @@
     padding: 0;
     margin: 0;
 }
+body{
+    background-color: #B0B0B0;
+}
 .app-title{
     justify-content: center;
     text-align: center;
@@ -28,14 +31,14 @@ input{
 }
 
 .item{
-    width: 80%;
+    width: 50%;
     height:auto;
     position: relative;
     margin: 6% auto;
     background: white;
     padding: 5px;
     border-radius: 10px;
-    box-shadow:0 5px 20px#738490;
+    box-shadow:0 5px 20px #738490;
 }
 img{
     width: 70%;
